--- a/Aperoleaks-server/package.json
+++ b/Aperoleaks-server/package.json
@@ -1,16 +1,9 @@
 {
-  "name": "aperoleaks-server",
+  "name": "aperoleaks",
   "version": "1.0.0",
-  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "expo start",
+    ...
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
-  "dependencies": {
-    "socket.io": "^4.8.1"
-  }
+  ...
 }
